--- a/source/publications.html.erb
+++ b/source/publications.html.erb
@@ -17,7 +17,7 @@ type: publications
     <% blog('publications').articles.each do |post| %>
     <% if post.data.item == item %>
     <h1 id="<%= post.slug %>" class="textbar textbar--fullwidth-small"><%= post.title %></h1>
-    <div class="textbox textbox--padding-bottom">
+    <div class="textbox textbox--padding-bottom textbox--with-emph-links">
       <%= post.body %>
       <div>
         <a href="<%= config.http_prefix + '#' + 'item-body-' + item.to_s %>" class="btn btn--small"> &lt;&lt;&nbsp;Back </a>
