--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -5,15 +5,15 @@
           <h1 class="textbar textbar--inverse">the_</h1><br>
           <h1 class="textbar textbar--inverse">Humanities</h1>
           <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
-          <p>Contact: <a class="textbox__link" href="mailto:yeehaa@codingthehumanities.com">Jan Hein Hoogstad</a></p>
+          <p>Contact: <a class="textbox__inverse-link" href="mailto:yeehaa@codingthehumanities.com">Jan Hein Hoogstad</a></p>
           <img class="image image--fullwidth image--margin-top" src="images/uva-logo.svg" alt="">
         </summery>
       </div>
       <div class="layout__item-offgrid-content hidden-md">
         <div class="textbox textbox--align-right">
-          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse footer__textbar-projects">Projects</a><br>
-          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse footer__textbar-publications">Publications</a><br>
-          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse footer__textbar-process">Process</a>
+          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse">Projects</a><br>
+          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse">Publications</a><br>
+          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse">Process</a>
         </div>
       </div>
     </footer>
