--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -66,7 +66,7 @@ layout: main
   </header>
   <article class="layout__item-grid-content">
     <h1 class="textbar textbar--fullwidth-smallest"><%= blog('blocks').articles[4].data.title %></h1>
-    <div class="textbox textbox--accent"><%= blog('blocks').articles[4].body %></div>
+    <div class="textbox"><%= blog('blocks').articles[4].body %></div>
   </article>
   <div class="layout__item-partners">
     <% for entity in blog('blocks').articles[4].data.partners %>
