--- a/source/stylesheets/modules/_partner.scss
+++ b/source/stylesheets/modules/_partner.scss
@@ -15,6 +15,9 @@
   @media (min-width: $breakpoint-xl){
     width: calc((1/4 * 100%) - (#{$gridUnit} * 3));
   }
+  @media (min-width: $breakpoint-xxl){
+    width: calc((1/5 * 100%) - (#{$gridUnit} * 3));
+  }
 }
 
 .partner__name {
