--- a/source/stylesheets/modules/_textbox.scss
+++ b/source/stylesheets/modules/_textbox.scss
@@ -8,14 +8,22 @@
   padding: 0 $gridUnit * 3 $gridUnit * 12 $gridUnit * 3;
 }
 
+.textbox--with-emph-links a {
+  display: inline-block;
+  padding: 0 $gridUnit;
+
+  background: $baseColor;
+  color: $inverseColor;
+}
+
+.textbox--align-right {
+  text-align: right;
+}
+
 // < these classes break styling >
 .textbox--accent > p:first-of-type{
   font-family: $titleFont;
-  // margin: 0 0 $gridUnit * 6 0;
-}
-
-.textbox--accent > p:last-child{
-  // margin: 0;
+  margin: 0 0 $gridUnit * 6 0;
 }
 
 .textbox > h2:last-of-type {
@@ -34,18 +42,7 @@
   list-style-position: inside;
 }
 
-.textbox--align-right {
-  text-align: right;
-}
-
 .textbox__inverse-link {
   color: white;
 }
 
-.textbox--with-emph-links a {
-  display: inline-block;
-  padding: 0 $gridUnit;
-
-  background: $baseColor;
-  color: $inverseColor;
-}
