--- a/source/stylesheets/modules/_hammer.scss
+++ b/source/stylesheets/modules/_hammer.scss
@@ -7,8 +7,11 @@
 .hammer__image {
   display: block;
   width: 80%;
-  max-width: 30vw;
+  max-width: 50vw;
   margin: 0 0 0 auto;
+  @media (min-width: $breakpoint-sm){
+    max-width: 30vw;
+  }
 }
 
 .hammer__image--header {
