--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,7 +16,7 @@ layout: main
   </article>
   <aside class="layout__item-offgrid-content layout__item-offgrid-content--no-padding">
     <div class="hammer">
-      <img class="hammer__image hammer__image--header " src="./images/hammer-short.svg" alt="">
+      <img onclick="" class="hammer__image hammer__image--header " src="./images/hammer-short.svg" alt="">
     </div>
   </aside>
 </div>
