set colors with helperclasses/theme

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -70,7 +70,7 @@ layout: main
   </article>
   <div class="layout__item-partners">
     <% for entity in blog('blocks').articles[4].data.partners %>
-    <div class="partner">
+    <div class="partner brand-primary">
       <a href="<%= entity.url || 'https://www.linkedin.com/vsearch/f?type=all&keywords=' + entity.name %>">
         <h3 class="partner__name"><%= entity.name %></h3>
         <p class="partner__job"><%= entity.job %></p>
