--- a/source/partials/_reference.erb
+++ b/source/partials/_reference.erb
@@ -1,4 +1,4 @@
-<div class="reference" onclick="" class="reference <%= reference.data.type %>">
+<div class="reference brand-primary" onclick="" class="reference <%= reference.data.type %>">
   <h5 class="reference__title"><%= reference.data.title %></h5>
   <div onclick="" class="reference__description">
     <p class="reference__summery"><%= reference.data.summery %></p>
