--- a/source/stylesheets/modules/_button.scss
+++ b/source/stylesheets/modules/_button.scss
@@ -15,6 +15,10 @@
   line-height: $gridUnit * 3;
 }
 
+.btn--top-margin {
+  margin-top: $gridUnit * 2;
+}
+
 .btn--nav {
   font-size: $gridUnit * 1;
   line-height: $gridUnit * 3;
