--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,18 +1,14 @@
     <footer class="layout__item layout__item--footer brand-base">
       <div class="layout__item-grid-content">
         <summery class="textbox">
-          <div class="textbox--heading-container">
-            <div>
-              <h1 class="textbar textbar--inverse">Coding_</h1><br>
-              <h1 class="textbar textbar--inverse">the_</h1><br>
-              <h1 class="textbar textbar--inverse">Humanities</h1>
-            </div>
-            <div class="textbox textbox--align-right show-sm" >
-              <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse">Projects</a><br>
-              <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse">Publications</a><br>
-              <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse">Process</a>
-            </div>
-          </div>
+          <h1 class="textbar textbar--inverse">Coding_</h1>
+          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse textbox--float-right show-sm">Projects</a>
+          <br>
+          <h1 class="textbar textbar--inverse">the_</h1>
+          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse textbox--float-right show-sm">Publications</a>
+          <br>
+          <h1 class="textbar textbar--inverse">Humanities</h1>
+          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse textbox--float-right show-sm">Process</a>
           <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
           <p>Contact: <a class="textbox__inverse-link" href="mailto:yeehaa@codingthehumanities.com">Jan Hein Hoogstad</a></p>
           <img class="image image--fullwidth image--margin-top" src="images/uva-logo.svg" alt="">
@@ -20,9 +16,9 @@
       </div>
       <div class="layout__item-offgrid-content hidden-md">
         <div class="textbox textbox--align-right">
-          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse">Projects</a><br>
-          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse">Publications</a><br>
-          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse">Process</a>
+          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse textbox--float-right">Projects</a><br>
+          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse textbox--float-right">Publications</a><br>
+          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse textbox--float-right">Process</a>
         </div>
       </div>
     </footer>
