--- a/source/typography.html.erb
+++ b/source/typography.html.erb
@@ -13,8 +13,9 @@ type: publications
 
 <div class="layout__item-grid-content">
   
-  <h1 class="textbar textbar--fullwidth textbar--fullwidth--small">Typography</h1>
+  <h1 class="textbar textbar--fullwidth textbar--fullwidth--small">The test sheet</h1>
   <h1 class="textbar textbar--fullwidth-small">The test sheet</h1>
+  <h1 class="textbar textbar--fullwidth-smallest">The test sheet</h1>
   <div class="textbox textbox--accent">
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
