--- a/source/stylesheets/modules/_textbox.scss
+++ b/source/stylesheets/modules/_textbox.scss
@@ -8,9 +8,8 @@
   padding: 0 $gridUnit * 3 $gridUnit * 12 $gridUnit * 3;
 }
 
-.textbox--heading-container {
-  display: flex; 
-  justify-content: space-between;
+.textbox--float-right {
+  float: right;
 }
 
 
@@ -20,10 +19,6 @@
 
   background: $baseColor;
   color: $inverseColor;
-}
-
-.textbox--align-right {
-  text-align: right;
 }
 
 // < these classes break styling >
