--- a/source/stylesheets/modules/_button.scss
+++ b/source/stylesheets/modules/_button.scss
@@ -10,6 +10,11 @@
   color: $inverseColor;
 }
 
+.btn:hover {
+  color: $baseColor;
+  background: $inverseColor;
+}
+
 .btn--small {
   font-size: $gridUnit * 1;
   line-height: $gridUnit * 3;
