--- a/source/stylesheets/modules/_image_helpers.scss
+++ b/source/stylesheets/modules/_image_helpers.scss
@@ -1,16 +1,16 @@
-.image--background-2 {
+.image-background-2 {
   background: url('../images/item-body-2.svg') $yellow;
   background-size: cover;
   background-position: right;
 }
 
-.image--background-3 {
+.image-background-3 {
   background: url('../images/item-body-3.svg') $yellow;
   background-size: cover;
   background-position: right;
 }
 
-.image--background-4 {
+.image-background-4 {
   background: url('../images/item-body-4.svg') $yellow;
   background-size: cover;
   background-position: right;
