--- a/source/stylesheets/modules/_image_helpers.scss
+++ b/source/stylesheets/modules/_image_helpers.scss
@@ -7,11 +7,11 @@
 .image-background-3 {
   background: url('../images/item-body-3.svg') $yellow;
   background-size: cover;
-  background-position: right;
+  background-position: center;
 }
 
 .image-background-4 {
   background: url('../images/item-body-4.svg') $yellow;
   background-size: cover;
-  background-position: right;
+  background-position: left;
 }
