--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,7 +24,7 @@ layout: main
 <div id="anchor-video" class="layout__item">
   <div onclick="" class="masonry">
     <% for img in 1..21 %>
-      <div class="masonry__image-container"><img class="masonry__image"src="./images/masonry/<%= img %>.jpg"></div><% end %>
+      <div onclick="" class="masonry__image-container"><img onclick="" class="masonry__image" src="./images/masonry/<%= img %>.jpg"></div><% end %>
   </div>
 </div>
 
