--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 title: Coding the Humanities
 layout: main
 ---
-<div id="anchor-header" class="layout__item brand-primary">
+<div id="top" class="layout__item brand-primary">
   <header class="layout__item-top brand-primary">
     <%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
   </header>
@@ -10,7 +10,7 @@ layout: main
     <div class="textbox">
       <h1 class="textbar textbar--big">Coding_</h1><br>
       <h1 class="textbar textbar--big">the_</h1><br>
-      <h1 class="textbar textbar--big">Humanities</h1><br>
+      <h1 class="textbar textbar--big textbar--margin-bottom">Humanities</h1><br>
       <%= blog('blocks').articles[0].body %>
     </div>
   </article>
@@ -21,7 +21,7 @@ layout: main
   </aside>
 </div>
 
-<div id="anchor-video" class="layout__item">
+<div class="layout__item">
   <div onclick="" class="masonry">
     <% for img in 1..21 %>
       <div onclick="" class="masonry__image-container"><img onclick="" class="masonry__image" src="./images/masonry/<%= img %>.jpg"></div><% end %>
@@ -29,12 +29,12 @@ layout: main
 </div>
 
 <% for item in 2..4 %>
-<div id="anchor-body-<%= item %>" class="layout__item">
+  <% blog('blocks').articles.each do |block| %>
+  <% if block.data.item == item %>
+<div id="<%= block.data.anchor %>" class="layout__item">
   <header class="layout__item-top brand-primary image-background-<%= item %>">
     <%= partial("partials/navigation", :locals => { :which_is_link_active => item }) %>
     <img style="opacity: 0;" class="image image--fullwidth" src="./images/item-body-<%= item %>.svg"></header>
-  <% blog('blocks').articles.each do |block| %>
-  <% if block.data.item == item %>
   <article class="layout__item-grid-content">
     <h1 class="textbar textbar--fullwidth-smallest"><%= block.title %></h1>
     <div class="textbox textbox--accent"><%= block.body %></div>
@@ -58,7 +58,7 @@ layout: main
 </div>
 <% end %>
 
-<div id="anchor-partners" class="layout__item">
+<div id="partners" class="layout__item">
   <header class="layout__item-top brand-primary">
     <%= partial("partials/navigation", :locals => { :which_is_link_active => 5 }) %>
     <img class="image image--fullwidth image--padding" src="images/item-partners.svg" alt="">
@@ -79,7 +79,7 @@ layout: main
   </div>
 </div>
 
-<div id="anchor-about"class="layout__item brand-primary">
+<div id="about"class="layout__item brand-primary">
   <header class="layout__item-top brand-primary">
     <%= partial("partials/navigation", :locals => { :which_is_link_active => 6 }) %>
   </header>
