--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -7,7 +7,7 @@
           <h1 class="textbar textbar--inverse">the_</h1>
           <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse textbox--float-right show-sm">Publications</a>
           <br>
-          <h1 class="textbar textbar--inverse">Humanities</h1>
+          <h1 class="textbar textbar--inverse textbar--margin-bottom">Humanities</h1>
           <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse textbox--float-right show-sm">Process</a>
           <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
           <p>Contact: <a class="textbox__inverse-link" href="mailto:yeehaa@codingthehumanities.com">Jan Hein Hoogstad</a></p>
