--- a/source/stylesheets/modules/_image_helpers.scss
+++ b/source/stylesheets/modules/_image_helpers.scss
@@ -1,17 +1,21 @@
 .image-background-2 {
   background: url('../images/item-body-2.svg') $yellow;
-  background-size: cover;
-  background-position: right;
+  background-size: 100% 100%;
+  background-position: top right;
+  background-repeat: no-repeat;
 }
 
 .image-background-3 {
   background: url('../images/item-body-3.svg') $yellow;
-  background-size: cover;
-  background-position: center;
+  background-size: 100%;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+
 }
 
 .image-background-4 {
   background: url('../images/item-body-4.svg') $yellow;
-  background-size: cover;
-  background-position: left;
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
