remove http prefix

--- a/source/stylesheets/modules/_image_helpers.scss
+++ b/source/stylesheets/modules/_image_helpers.scss
@@ -8,7 +8,7 @@
 .image-background-3 {
   background: url('../images/item-body-3.svg') $yellow;
   background-size: 100%;
-  background-position: center bottom;
+  background-position: bottom center;
   background-repeat: no-repeat;
 
 }
@@ -16,6 +16,6 @@
 .image-background-4 {
   background: url('../images/item-body-4.svg') $yellow;
   background-size: 100%;
-  background-position: center center;
+  background-position: bottom center;
   background-repeat: no-repeat;
 }
