--- a/source/stylesheets/modules/_masonry.scss
+++ b/source/stylesheets/modules/_masonry.scss
@@ -1,14 +1,34 @@
 .masonry {
   width: 100%;
+  max-width: 50vw;
   padding: $gridUnit * 9 $gridUnit * 3;
+
   -webkit-columns: 2;
+  -moz-columns: 2;
+  -ms-columns: 2;
+  -o-columns: 2;
+  columns: 2;
+
   -webkit-column-gap: $gridUnit * 3;
+  -moz-column-gap: $gridUnit * 3;
+  -ms-column-gap: $gridUnit * 3;
+  -o-column-gap: $gridUnit * 3;
+  column-gap: $gridUnit * 3;
+
   -webkit-filter: grayscale(100%) url(#yellow-filter);
   @media (min-width: $breakpoint-sm){
     -webkit-columns: 3;
+    -moz-columns: 3;
+    -ms-columns: 3;
+    -o-columns: 3;
+    columns: 3;
   }
   @media (min-width: $breakpoint-xl){
     -webkit-columns: 4;
+    -moz-columns: 4;
+    -ms-columns: 4;
+    -o-columns: 4;
+    columns: 4;
   }
 }
 
