--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -31,8 +31,8 @@
     <!-- end favicons -->
 
     <!-- inline SVG filter -->
-    <svg style="display: none" class="filter-for-images">
-      <filter id="yellow-filter" color-interpolation-filters="sRGB"
+    <svg style="display: none;">
+      <filter  id="yellow-filter" color-interpolation-filters="sRGB"
               x="0" y="0" height="100%" width="100%">
         <feColorMatrix type="matrix"
           values="0.8980392156862745 0 0 0  0 
