--- a/source/stylesheets/modules/_image_helpers.scss
+++ b/source/stylesheets/modules/_image_helpers.scss
@@ -1,6 +1,6 @@
 .image-background-2 {
   background: url('../images/item-body-2.svg') $yellow;
-  background-size: 100% 100%;
+  background-size: 100%;
   background-position: top right;
   background-repeat: no-repeat;
 }
