change background size

--- a/source/stylesheets/modules/_image_helpers.scss
+++ b/source/stylesheets/modules/_image_helpers.scss
@@ -1,8 +1,11 @@
 .image-background-2 {
   background: url('../images/item-body-2.svg') $yellow;
-  background-size: 130%;
+  background-size: 200%;
   background-position: top right;
   background-repeat: no-repeat;
+  @media (min-width: $breakpoint-sm){
+    background-size: 130%;
+  }
 }
 
 .image-background-3 {
