--- a/source/stylesheets/modules/_masonry.scss
+++ b/source/stylesheets/modules/_masonry.scss
@@ -15,8 +15,6 @@
   -o-column-gap: $gridUnit * 3;
   column-gap: $gridUnit * 3;
 
-  -webkit-filter: url(#yellow-filter);
-
   @media (min-width: $breakpoint-sm){
     -webkit-columns: 4;
     -moz-columns: 4;
@@ -31,6 +29,10 @@
     -o-columns: 5;
     columns: 5;
   }
+}
+
+.masonry__image-outer-container {
+  -webkit-filter: url(#yellow-filter);
 }
 
 .masonry__image-container {
@@ -54,10 +56,21 @@
   -moz-filter: brightness(160%) blur(2px) contrast(2000%);
   -o-filter: brightness(160%) blur(2px) contrast(2000%);
   filter: brightness(160%) blur(2px) contrast(2000%);
-
 }
 
-.masonry:active, .masonry:active .masonry__image-container, .masonry:active .masonry__image {
+.masonry__image-outer-container:hover,
+.masonry__image-outer-container:hover .masonry__image-container,
+.masonry__image-outer-container:hover .masonry__image {
+  -webkit-filter: unset;
+  -moz-filter: unset;
+  -o-filter: unset;
+  filter: unset;
+}
+
+.masonry:active, 
+.masonry:active .masonry__image-outer-container, 
+.masonry:active .masonry__image-container, 
+.masonry:active .masonry__image {
   -webkit-filter: unset;
   -moz-filter: unset;
   -o-filter: unset;
