iphone onclick bug

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -23,7 +23,7 @@ layout: main
 
 <div class="layout__item">
   <div onclick="" class="masonry">
-    <% for img in 1..34 %><div class="masonry__image-outer-container"><div onclick="" class="masonry__image-container"><img onclick="" class="masonry__image" src="./images/masonry/<%= img %>.jpg"></div></div><% end %>
+    <% for img in 1..34 %><div onclick="" class="masonry__image-outer-container"><div onclick="" class="masonry__image-container"><img onclick="" class="masonry__image" src="./images/masonry/<%= img %>.jpg"></div></div><% end %>
   </div>
 </div>
 
