--- a/source/stylesheets/modules/_masonry.scss
+++ b/source/stylesheets/modules/_masonry.scss
@@ -32,7 +32,7 @@
 }
 
 .masonry__image-outer-container {
-  -webkit-filter: url(#yellow-filter);
+  // -webkit-filter: url(#yellow-filter);
 }
 
 .masonry__image-container {
@@ -41,10 +41,10 @@
   margin: 0 0 $gridUnit * 3 0;
   background: $black;
 
-  -webkit-filter: grayscale(100%);
-  -moz-filter: grayscale(100%);
-  -o-filter: grayscale(100%);
-  filter: grayscale(100%);
+  // -webkit-filter: grayscale(100%);
+  // -moz-filter: grayscale(100%);
+  // -o-filter: grayscale(100%);
+  // filter: grayscale(100%);
 }
 
 .masonry__image {
@@ -52,20 +52,20 @@
   max-width: 50vw;
   height: auto;
 
-  -webkit-filter:  brightness(160%) blur(2px) contrast(2000%);
-  -moz-filter: brightness(160%) blur(2px) contrast(2000%);
-  -o-filter: brightness(160%) blur(2px) contrast(2000%);
-  filter: brightness(160%) blur(2px) contrast(2000%);
+  // -webkit-filter:  brightness(160%) blur(2px) contrast(2000%);
+  // -moz-filter: brightness(160%) blur(2px) contrast(2000%);
+  // -o-filter: brightness(160%) blur(2px) contrast(2000%);
+  // filter: brightness(160%) blur(2px) contrast(2000%);
 }
 
 .masonry:active, 
 .masonry:active .masonry__image-outer-container, 
 .masonry:active .masonry__image-container, 
 .masonry:active .masonry__image {
-  -webkit-filter: unset;
-  -moz-filter: unset;
-  -o-filter: unset;
-  filter: unset;
+  // -webkit-filter: unset;
+  // -moz-filter: unset;
+  // -o-filter: unset;
+  // filter: unset;
 }
 
 .masonry__image-outer-container:hover,
@@ -74,8 +74,8 @@
 .masonry__image-outer-container:active,
 .masonry__image-outer-container:active .masonry__image-container,
 .masonry__image-outer-container:active .masonry__image {
-  -webkit-filter: unset;
-  -moz-filter: unset;
-  -o-filter: unset;
-  filter: unset;
+  // -webkit-filter: unset;
+  // -moz-filter: unset;
+  // -o-filter: unset;
+  // filter: unset;
 }
