--- a/source/stylesheets/modules/_button.scss
+++ b/source/stylesheets/modules/_button.scss
@@ -1,6 +1,6 @@
 .btn {
   display: inline-block;
-  padding: 0 $gridUnit * 2;
+  padding: 0 $gridUnit;
 
   background: $baseColor;
   
@@ -25,10 +25,10 @@
 }
 
 .btn--nav {
-  font-size: $gridUnit * 1;
-  line-height: $gridUnit * 3;
+  font-size: $gridUnit * 1.5;
+  line-height: $gridUnit * 2.5;
   @media (min-width: $breakpoint-md){
-    padding: 0 $gridUnit * 3;
+    padding: 0 $gridUnit * 1.5;
   }
 }
 
