--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,14 +1,24 @@
     <footer class="layout__item layout__item--footer brand-base">
       <div class="layout__item-grid-content">
-        <summery class="textbox">
-          <h1 class="textbar textbar--inverse">Coding_</h1>
-          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse textbox--float-right show-sm">Projects</a>
-          <br>
-          <h1 class="textbar textbar--inverse">the_</h1>
-          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse textbox--float-right show-sm">Publications</a>
-          <br>
-          <h1 class="textbar textbar--inverse textbar--margin-bottom">Humanities</h1>
-          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse textbox--float-right show-sm">Process</a>
+        <summery class="paddingbox">
+          <div> 
+            <h3 class="textbar textbar--inverse">Coding_</h3>
+            <a href="<%= config.http_prefix + 'projects.html#' %>">
+              <h3 class="textbar textbar--inverse textbar--float-right show-md">Projects</h3>
+            </a>
+          </div>
+          <div> 
+            <h3 class="textbar textbar--inverse">the_</h3>
+            <a href="<%= config.http_prefix + 'publications.html#' %>" >
+              <h3 class="textbar textbar--inverse textbar--float-right show-md">Publications</h3>
+            </a>
+          </div>
+          <div> 
+            <h3 class="textbar textbar--inverse textbar--margin-bottom">Humanities</h3>
+            <a href="<%= config.http_prefix + '#' %>" >
+              <h3 class="textbar textbar--inverse textbar--float-right show-md">Process</h3>
+            </a>
+          </div>
           <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
           <p>Contact: <a class="textbox__inverse-link" href="mailto:yeehaa@codingthehumanities.com">Jan Hein Hoogstad</a></p>
           <img class="image image--fullwidth image--margin-top" src="images/uva-logo.svg" alt="">
@@ -16,9 +26,21 @@
       </div>
       <div class="layout__item-offgrid-content hidden-md">
         <div class="textbox textbox--align-right">
-          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse textbox--float-right">Projects</a><br>
-          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse textbox--float-right">Publications</a><br>
-          <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse textbox--float-right">Process</a>
+          <div> 
+            <a href="<%= config.http_prefix + 'projects.html#' %>">
+              <h3 class="textbar textbar--inverse textbar--float-right hidden-md">Projects</h3>
+            </a>
+          </div>
+          <div> 
+            <a href="<%= config.http_prefix + 'publications.html#' %>" >
+              <h3 class="textbar textbar--inverse textbar--float-right hidden-md">Publications</h3>
+            </a>
+          </div>
+          <div> 
+            <a href="<%= config.http_prefix + '#' %>" >
+              <h3 class="textbar textbar--inverse textbar--float-right hidden-md">Process</h3>
+            </a>
+          </div>
         </div>
       </div>
     </footer>
